impl(stack), fix(example): stack class implemented & example edited

--- a/example/stack/CMakeLists.txt
+++ b/example/stack/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(memory)
+project(stack)
 
 add_executable(${PROJECT_NAME} "${OSL_EXAMPLE_DIR}/${PROJECT_NAME}/${PROJECT_NAME}.cpp")
 target_link_libraries(${PROJECT_NAME} OSL)
