impl(string, defines): string class implemented & ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,5 @@ if (OSL_BUILD_TESTS)
  add_subdirectory("${OSL_EXAMPLE_DIR}/array/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/memory/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/queue/")
+ add_subdirectory("${OSL_EXAMPLE_DIR}/string/")
 endif ()
