--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ option(OSL_BUILD_TESTS "Build the OSL test programs" TRUE)
 if (OSL_BUILD_TESTS)
  add_subdirectory("${OSL_EXAMPLE_DIR}/allocator/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/array/")
+ add_subdirectory("${OSL_EXAMPLE_DIR}/math/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/memory/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/queue/")
  add_subdirectory("${OSL_EXAMPLE_DIR}/string/")
