fix(...): big count of fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-project(OSL VERSION 0.0.1)
+project(osl VERSION 0.0.1)
 
 set (CMAKE_CXX_STANDARD 17)
 
-set(OSL_EXAMPLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/example")
-set(OSL_LIBS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libs")
-
-include_directories("${OSL_LIBS_DIR}/")
+set(OSL_EXAMPLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/examples")
+set(OSL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(OSL_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 file(GLOB_RECURSE OSL_SRC_FILES
-    "${OSL_LIBS_DIR}/*.hpp"
+    "${OSL_SRC_DIR}/*.cpp"
 )
+
+add_library(${PROJECT_NAME} ${OSL_SRC_FILES})
+target_include_directories(${PROJECT_NAME} PUBLIC "${OSL_INCLUDE_DIR}/")
 
 # Options
 option(OSL_BUILD_TESTS "Build the OSL test programs" TRUE)
