fix(build): build script fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(osl VERSION 0.0.1)
 
 set (CMAKE_CXX_STANDARD 17)
 
-set(OSL_EXAMPLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/examples")
+set(OSL_EXAMPLES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/examples")
 set(OSL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(OSL_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
@@ -19,11 +19,11 @@ target_include_directories(${PROJECT_NAME} PUBLIC "${OSL_INCLUDE_DIR}/")
 option(OSL_BUILD_TESTS "Build the OSL test programs" TRUE)
 
 if (OSL_BUILD_TESTS)
- add_subdirectory("${OSL_EXAMPLE_DIR}/allocator/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/array/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/list/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/math/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/memory/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/queue/")
- add_subdirectory("${OSL_EXAMPLE_DIR}/string/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/allocator/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/array/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/list/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/math/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/memory/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/queue/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/string/")
 endif ()
