--- a/examples/array/CMakeLists.txt
+++ b/examples/array/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(array)
 
-add_executable(${PROJECT_NAME} "${OSL_EXAMPLE_DIR}/${PROJECT_NAME}/${PROJECT_NAME}.cpp")
+add_executable(${PROJECT_NAME} "${PROJECT_NAME}.cpp")
 target_link_libraries(${PROJECT_NAME} PRIVATE osl)
