fix(allocator): much bugs fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,5 @@ if (OSL_BUILD_TESTS)
  add_subdirectory("${OSL_EXAMPLES_DIR}/memory/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/queue/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/string/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/vector/")
 endif ()
