mod(list -> deque): ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ option(OSL_BUILD_TESTS "Build the OSL test programs" TRUE)
 if (OSL_BUILD_TESTS)
  add_subdirectory("${OSL_EXAMPLES_DIR}/allocator/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/array/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/list/")
+ add_subdirectory("${OSL_EXAMPLES_DIR}/deque/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/math/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/memory/")
  add_subdirectory("${OSL_EXAMPLES_DIR}/queue/")
