--- a/examples/deque/CMakeLists.txt
+++ b/examples/deque/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(list)
+project(deque)
 
 add_executable(${PROJECT_NAME} "${PROJECT_NAME}.cpp")
 target_link_libraries(${PROJECT_NAME} PRIVATE osl)
