rew(project), impl(gtests): many small changes in the project. can be called rewrite & google tests implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,29 +2,25 @@ cmake_minimum_required(VERSION 3.0.0)
 
 project(osl VERSION 0.0.1)
 
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 
-set(OSL_EXAMPLES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/examples")
 set(OSL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(OSL_TESTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests")
 set(OSL_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+set(OSL_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
 file(GLOB_RECURSE OSL_SRC_FILES
     "${OSL_SRC_DIR}/*.cpp"
 )
 
-add_library(${PROJECT_NAME} ${OSL_SRC_FILES})
-target_include_directories(${PROJECT_NAME} PUBLIC "${OSL_INCLUDE_DIR}/")
+set(OSL_LIBRARY ${PROJECT_NAME})
+add_library(${OSL_LIBRARY} ${OSL_SRC_FILES})
+target_include_directories(${OSL_LIBRARY} PUBLIC ${OSL_INCLUDE_DIR})
 
-# Options
 option(OSL_BUILD_TESTS "Build the OSL test programs" TRUE)
 
 if (OSL_BUILD_TESTS)
- add_subdirectory("${OSL_EXAMPLES_DIR}/allocator/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/array/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/deque/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/math/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/memory/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/queue/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/string/")
- add_subdirectory("${OSL_EXAMPLES_DIR}/vector/")
+ add_subdirectory("${OSL_LIB_DIR}/googletest")
+ enable_testing()
+ add_subdirectory("${OSL_TESTS_DIR}")
 endif ()
